<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageViewLogoUnisannio"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo_unisannio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_unisannio" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="97dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/logo_kasteca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_kasteca" />


    <EditText
        android:id="@+id/Email_Edit_Text"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="49dp"
        android:hint="@string/Email_text"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/Password_Edit_Text"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="49dp"
        android:hint="@string/Password_text"
        android:inputType="textPassword"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_Edit_Text"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/button"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="49dp"
        android:background="@color/colorButton"
        android:onClick="login"
        android:text="@string/Login_text"
        android:textColor="@color/colorGeneralText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_Edit_Text" />

    <TextView
        android:id="@+id/New_Account_Text"
        android:layout_width="214dp"
        android:layout_height="0dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="85dp"
        android:text="@string/Create_New_Account_Text"
        android:textColor="@color/colorGeneralText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />



</androidx.constraintlayout.widget.ConstraintLayout>