<resources>
    <string name="app_name">KASTECA</string>

    <!-- stringhe per la MainActivity -->
    <string name="Email_text">Email</string>
    <string name="Password_text">Password</string>
    <string name="Login_text">LOGIN</string>
    <string name="Create_New_Account_Text">Non hai ancora un account? Creane uno</string>
    <string name="Insert_correct_data">Perfavore, inserisci i dati corretti</string>
    <string name="Try_Again">Perfavore, riprova</string>
    <string name="Login_Failed">Login fallito</string>
    <string name="Dialog_neutral_button_login_failed">OK</string>
    <string name="Login_Successful">Login eseguito con successo!</string>
    <string name="desc_unisannio">Logo Unisannio</string>
    <string name="desc_kasteca">Logo app</string>

    <!-- stringhe per la RegistrationActivity -->
    <string name="Registration_Failed">Registrazione fallita</string>
    <string name="Registration_successful">Registrazione avvenuta con successo</string>
    <string name="Docente_Studente_Switch_Text">Sei uno studente?</string>
    <string name="Name_Text">Nome</string>
    <string name="Surname_Text">Cognome</string>
    <string name="Matricola_Text">Matricola</string>
    <string name="Create_Account_Text">CREA ACCOUNT</string>
    <string name="Already_A_Member_Text">Sei già iscritto? Vai al Login</string>
    <string name="Not_Correct_Fields">I campi non sono stati riempiti correttamente</string>
    <string name="dominio_unisannio">\u0040unisannio.it</string>
    <string name="dominio_studenti_unisannio">\u0040studenti.unisannio.it</string>

    <!-- stringhe per la LogDocenteActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_corsi">Corsi</string>
    <string name="menu_aggiungi_corso">Aggiungi Corso</string>
    <string name="nome_drower">nome</string>
    <string name="email_drower">email</string>
    <string name="desc_profilo">Immagine profilo</string>

    <!-- stringhe per la CorsoDocenteActivity -->
    <string name="menu_post">Post</string>
    <string name="desc_icona">Icona contenuto</string>
    <string name="menu_visualizza_studenti_iscritti">Visualizza Studenti iscritti</string>
    <string name="menu_visualizza_richieste_studente">Visualizza Richieste Studenti</string>

    <!-- stringhe per la CorsoStudenteActivity -->
    <string name="menu_cancellazione_dal_corso">Abbandona il Corso</string>
    <string name="Dialog_titolo_conferma_cancellazione">Sei sicuro di voler abbandonare il corso?</string>
    <string name="Dialog_descrizione_conferma_cancellazione">Cosi facendo perderai tutti i dati relativi al corso</string>
    <string name="Dialog_button_si_conferma_cancellazione">Si</string>
    <string name="Dialog_button_no_conferma_cancellazione">No</string>
    <string name="Dialog_titolo_corretta_cancellazione">La cancellazione è avvenuta con successo</string>
    <string name="Dialog_titolo_incorretta_cancellazione">La cancellazione non è avvenuta con successo, riprova</string>
    <string name="Dialog_button_ok_cancellazione">OK</string>




    <!-- stringhe per la InfoDocenteActivity -->
    <string name="nome_studente_text">Nome</string>
    <string name="email_studente_text">Email</string>
    <string name="matricol_studente_text">Matricola</string>
    <string name="invia_email_button">Invia Email</string>

    <!-- stringhe per la LogStudenteActivity -->
    <string name="menu_iscrizione_corso">Iscrizione ad un Corso</string>
    <string name="matricola_drower">matricola</string>
    <string name="logout">Logout</string>


    <!-- stringhe per la RichiestaIscrizioneActivity -->
    <string name="iscriviti_a_un_corso">Iscriviti a un corso</string>
    <string name="chiedi_al_docente_il_codice">Chiedi al docente il codice del corso e inseriscilo qui</string>
    <string name="Codice_Corso_text">Codice Corso</string>
    <string name="bottone_richiesta_iscrizione">RICHIEDI ISCRIZIONE</string>
    <string name="Codice_Corso_non_corretto">Il codice inserito non appartiene a nessun corso esistente</string>
    <string name="Studente_gia_iscritto">Sei già iscritto a questo corso</string>
    <string name="Richiesta_gia_inviata">Hai già inviato una richiesta per questo corso</string>

    <!-- stringhe per la ListaStudentiIscrittiActivity -->
    <string name="nessuno_studente_iscritto">Non ci sono studenti iscritti al corso</string>
    <string name="Dialog_neutral_button_nessuno_studente_iscritto">OK</string>
    <string name="Dialog_cancellazione_stuednte_question">Sei sicuro di volere cancellare lo Studente?</string>
    <string name="Dialog_neutral_button_cancella_studente">Si</string>
    <string name="Dialog_neutral_button_non_cancellare_lo_studente">No</string>

    <!-- stringhe per la ListaRichiesteStudentiActivity -->
    <string name="nessuna_richiesta">Non ci sono nuove richieste</string>
    <string name="Dialog_neutral_button_nessuna_richiesta">OK</string>

    <!-- stringhe per la InfoRichiestaStudenteActivity -->
    <string name="data_richiesta_text">Data</string>
    <string name="accetta_richiesta_button">Accetta Richiesta</string>
    <string name="rifiuta_richiesta_button">Rifiuta Richiesta</string>

    <!-- stringhe per la NewPostActivity -->
    <string name="testo_post">Scrivi qualcosa</string>
    <string name="link">Link</string>
    <string name="spinner_tag">Tag</string>
    <string name="upload_failed">Upload fallito</string>
    <string name="missing_data">Perfavore, inserisci i dati mancanti.</string>
    <string name="upload_pdf_fallito">Non è stato possibile caricare il pdf. Il post non è stato caricato</string>
    <string name="upload_pdf_successo">Il pdf è stato caricato.</string>
    <string name="upload_successo">Il post è stato caricato.</string>
    <string name="desc_pdf">Icona pdf</string>
    <string name="desc_upload">Icona upload</string>

    <!-- stringhe per il PostDocenteFragment-->
    <string name="get_failed">Fallimento recupero dati</string>

    <!-- stringhe per il PostStudenteFragment-->
    <string name="get_docente_failed">Non è stato possibile recuperare il docente del corso.</string>

    <!-- stringhe per il PostActivity-->
    <string name="Numero_commenti">Commenti</string>
    <string name="no_activity">Nessun Web Browser trovato</string>
    <string name="download_webBrowser">Per favore, scarica un web browser.</string>
    <string name="upload_post_error">Errore nel caricamento del nuovo post.</string>
    <string name="aggiungi_commento">Commenta</string>
    <string name="formato_data">dd/MM/yyyy HH:mm</string>
    <string name="titolo">File Download</string>
    <string name="modifica_button">Modifica</string>
    <string name="desc_invio">Icona invio</string>
    <string name="desc_indietro">icona indietro</string>
    <string name="risposte">Risposte</string>

    <!-- stringhe per l'item Risposta-->
    <string name="eliminaRisposta">Elimina</string>



    <!-- stringhe per il CommentiActivity-->
    <string name="rispondi">Rispondi</string>
    <string name="elimina">Elimina</string>
    <string name="visualizza_risposte">Visualizza tutte le risposte</string>
    <string name="scrivi_commento">Scrivi un commento…</string>

    <!-- stringhe per CreazioneCorsoFragment -->
    <string name="conferma">Conferma</string>
    <string name="inserimento_info">Inserisci le informazioni del nuovo corso:</string>
    <string name="hint_nome_corso">Nome del corso</string>
    <string name="hint_codice">Codice</string>
    <string name="hint_descrizione">Descrizione</string>

</resources>
